# fd-pde-solver

./: .gitignore  CMakeLists.txt
apps/: CMakeLists.txt
cmake/: compiler_flags.cmake
include/backend/: backend.hpp
include/backends/: base.hpp
include/pde/: grid.hpp
include/pde/boundary/: dirichlet.hpp
include/pde/diffop/: diffop.hpp  laplacian.hpp
include/pde/mesh/: mesh.hpp
src/: CMakeLists.txt
src/pde/diffop/: laplacian.cpp
src/pde/mesh/: mesh.cpp
tests/: CMakeLists.txt  laplacian.cpp  poisson_eq.cpp
